refactor: amélioration de la gestion des exceptions et simplification des actions des boutons dans plusieurs contrôleurs (fix des warnings en général)